# movies-api

./: .env.example  .env.test  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.local.yaml  docker-compose.tests.yaml  entrypoint.sh  mypy.ini  pyproject.toml  run.py
.github/workflows/: ci.yaml
infra/backend/: Dockerfile  entrypoint.sh  wait-for-it.sh
infra/nginx/: nginx.conf
infra/nginx/configs/: site.conf
src/: main.py
src/api/: errors.py
src/api/request_models/: film_request.py  person_request.py
src/api/request_models/common/: list_iteration.py
src/api/response_models/: common.py  film_response.py  genre_response.py  person_response.py  status_response.py
src/api/v1/: __init__.py  films.py  genres.py  persons.py  status.py
src/core/: config.py
src/db/: abstract.py  repositories.py
src/db/elastic/: models.py  query_builders.py  repositories.py
src/db/redis/: adapter.py  repository.py
src/dependencies/: auth.py
src/exceptions/: auth.py  redis.py
src/models/: auth.py  film.py  genre.py  person.py  search.py
src/services/: auth.py  films.py  genres.py  persons.py  status.py
tests/: conftest.py
tests/functional/: docker-compose.yaml  settings.py
tests/functional/fixtures/: elasticsearch.py  http_querying.py  redis.py
tests/functional/src/: test_films.py  test_films_search.py  test_genres.py  test_persons.py  test_persons_search.py
tests/functional/testdata/: common.py  films.py  genres.py  persons.py
tests/functional/utils/: fixture_types.py
tests/functional/utils/elastic/: genres.py  indices.py  movies.py  persons.py
