[tool.poetry]
name = "movies-api"
version = "0.1.0"
description = ""
authors = ["Mikhail Spiridonov <mspiridonov2706@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
elasticsearch = "7.8.0"
pre-commit = "^3.1.1"
orjson = "^3.8.7"
aiohttp = "^3.8.4"
redis = "^4.5.1"
uvicorn = {extras = ["standard"], version = "^0.21.0"}
fastapi-cache2 = {extras = ["redis"], version = "^0.2.1"}
gunicorn = "20.1.0"
fastapi = "^0.95.0"
pyjwt = "^2.7.0"


[tool.poetry.group.tests.dependencies]
pytest-asyncio = "0.12.0"
pytest = "6.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
profile = "black"

[tool.black]
line-length = 120

[tool.flake8]
exclude = [".env", ".env.example", ".git", "__pycache__", "venv/", "env/", "*/tests/*", "*/migrations/*"]
max-line-length = 120
